# office-to-png

./: .gitignore  Cargo.toml  DOCX_RENDERING_CHECKLIST.md  README.md
crates/core/: Cargo.toml
crates/core/benches/: conversion.rs
crates/core/src/: config.rs  converter.rs  error.rs  lib.rs  pdf_renderer.rs  pool.rs
crates/core/tests/: integration_tests.rs
crates/python/: Cargo.toml  build.rs  pyproject.toml
crates/python/python/office_to_png/: __init__.py
crates/python/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: docx_renderer.rs  lib.rs  render_context.rs  styles.rs  text_layout.rs  text_shaper.rs  xlsx_grid_renderer.rs  xlsx_renderer.rs
crates/wasm/src/fonts/: mod.rs
crates/wasm/src/renderer/: canvas2d.rs  mod.rs  traits.rs  webgpu.rs
crates/wasm/tests/: integration_tests.rs
demo/: index.html  test-server.html  test.html  worker.js
deploy/: Dockerfile  docker-compose.yml  install-deps.sh
deploy/systemd/: libreoffice-headless@.service
examples/: batch_convert.py  python_quickstart.py  simple_convert.py
tests/fixtures/generator/: Cargo.toml
tests/fixtures/generator/src/: main.rs
tests/fixtures/output/: complex.docx  corrupt.docx  empty.docx  formatted.docx  formatted.xlsx  multipage.docx  multisheet.xlsx  simple.docx  simple.xlsx  tables.docx
