[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/python",
    "crates/wasm",
    "tests/fixtures/generator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["office-to-png contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mdaiter/office-to-png"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
async-channel = "2.3"
futures = "0.3"

# PDF rendering (pdfium - Google's PDF engine)
# Use "static" feature to link Pdfium at compile time instead of runtime
pdfium-render = { version = "0.8", default-features = false, features = ["pdfium_latest", "thread_safe", "image"] }

# Image processing with SIMD-accelerated PNG
image = "0.25"
png = { version = "0.17", features = [] }

# Parallelism
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"

# Process management
async-process = "2"
which = "7"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Temp files and paths
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PyO3 for Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# WASM and WebGPU
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wgpu = "23"
web-sys = "0.3"
js-sys = "0.3"

# Document parsing for WASM
docx-rs = "0.4"
calamine = "0.26"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.release-wasm]
inherits = "release"
opt-level = "s"
lto = true
